# BittleCoCo

./: .gitattributes  README.md  bittle.service  run.sh
assets/: image.avif
assets/example/FaceDetection_Demo/cpp/: CMakeLists.txt  main.cc
assets/example/FaceDetection_Demo/onnx/: main.py
assets/example/Serial_Demo/: CMakeLists.txt  hello_send.cpp  main.cpp  opencat_serial.cpp  opencat_serial.hpp  serial.cpp  serial.hpp  serial_example.cpp
example/Serial_Demo/: main.cpp
gesture_legs_control/: CMakeLists.txt
gesture_legs_control/include/gesture_legs_control/: gesture_control_node.h  opencat.hpp  opencat_serial.hpp  serial.hpp
gesture_legs_control/src/: gesture_control_node.cpp  opencat_serial.cpp
install/: setup.sh
install/gesture_legs_control/lib/gesture_legs_control/: gesture_legs_control
install/gesture_legs_control/share/ament_index/resource_index/package_run_dependencies/: gesture_legs_control
install/gesture_legs_control/share/gesture_legs_control/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gesture_legs_control/share/gesture_legs_control/cmake/: gesture_legs_controlConfig.cmake
install/opencat/include/opencat/: opencat.hpp
install/opencat/local/lib/python3.10/dist-packages/opencat-0.0.0-py3.10.egg-info/: PKG-INFO
install/opencat/share/opencat/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/opencat/share/opencat/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake
install/opencat_msgs/include/opencat_msgs/opencat_msgs/msg/: rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h
install/opencat_msgs/include/opencat_msgs/opencat_msgs/srv/detail/: base_task__builder.hpp  base_task__functions.h  base_task__rosidl_typesupport_fastrtps_c.h  base_task__rosidl_typesupport_introspection_c.h  base_task__struct.hpp  base_task__traits.hpp  base_task__type_support.hpp
install/opencat_msgs/local/lib/python3.10/dist-packages/opencat_msgs/: _opencat_msgs_s.ep.rosidl_typesupport_c.c
install/opencat_msgs/local/lib/python3.10/dist-packages/opencat_msgs/srv/: __init__.py  _base_task_s.c
install/opencat_msgs/share/ament_index/resource_index/rosidl_interfaces/: opencat_msgs
install/opencat_msgs/share/opencat_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/opencat_msgs/share/opencat_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_opencat_msgs__rosidl_generator_cExport-noconfig.cmake  export_opencat_msgs__rosidl_generator_cExport.cmake  export_opencat_msgs__rosidl_generator_cppExport.cmake  export_opencat_msgs__rosidl_generator_pyExport.cmake  export_opencat_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_opencat_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_opencat_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_opencat_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  opencat_msgsConfig.cmake  opencat_msgs__rosidl_typesupport_cExport-noconfig.cmake  opencat_msgs__rosidl_typesupport_cppExport-noconfig.cmake  opencat_msgs__rosidl_typesupport_cppExport.cmake  opencat_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  opencat_msgs__rosidl_typesupport_introspection_cExport.cmake  opencat_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  opencat_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/opencat_msgs/share/opencat_msgs/srv/: BaseTask.idl  BaseTask.srv  BaseTask_Response.msg
install/opencat_serial/include/opencat_serial/: serial.hpp
install/opencat_serial/share/opencat_serial/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/opencat_serial/share/opencat_serial/cmake/: ament_cmake_export_dependencies-extras.cmake
install/ros2_helloworld/lib/ros2_helloworld/: ros2_helloworld
install/ros2_helloworld/share/ros2_helloworld/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/serial_example/share/serial_example/: package.bash  package.zsh
log/: latest_build
ros2_helloworld/: CMakeLists.txt  package.xml
ros2_helloworld/include/ros2_helloworld/: helloworld.h
ros2_helloworld/src/: main.cpp
ros2_opencat/opencat/: CMakeLists.txt  package.xml  setup.py
ros2_opencat/opencat/include/opencat/: opencat.hpp  opencat_data.hpp
ros2_opencat/opencat/src/opencat/: roscat.py
ros2_opencat/opencat_examples/: CMakeLists.txt
ros2_opencat/opencat_examples/src/: client_example.cpp
ros2_opencat/opencat_msgs/: CMakeLists.txt  package.xml
ros2_opencat/opencat_serial/: CMakeLists.txt  package.xml
ros2_opencat/opencat_serial/include/opencat_serial/: opencat_serial.hpp  serial.hpp
ros2_opencat/opencat_serial/src/: opencat_serial.cpp  serial.cpp
ros2_opencat/opencat_server/: CMakeLists.txt
ros2_opencat/opencat_server/include/opencat_server/: opencat_server.hpp
ros2_opencat/opencat_server/src/: opencat_server.cpp  opencat_service_node.cpp
