<?xml version="1.0"?>
<package format="3">
  <name>opencat_msgs</name>
  <version>0.0.0</version>
  <description>The opencat message package</description>

  <maintainer email="jj1460853569@gmail.com">C.C</maintainer>


  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>std_msgs</depend>  
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
